static/css/home.css
/* ... */
.contact .section-head {
  color: #273469;
}

.contact-display {
  width: 80%;
  max-width: 70rem;
  height: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

.contact-text {
  width: 100%;
  height: auto;
}

.contact-text h2 {
  font-size: 2rem;
  text-align: center;
}

.contact-text p {
  font-size: 1.5rem;
}

.contact-form {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  color: #273469;
  font-size: 2rem;
  margin-bottom: 2rem;
}

form {
  margin-top: 3rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: auto;
  border-color: transparent;
}

.form-control {
  width: 100%;
  background: transparent;
  border: none;
  outline: none;
  border-bottom: 1px solid #273469;
  color: #273469;
  font-family: "Yantramanav", sans-serif;
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.contact-form button {
  width: 15rem;
  height: 3rem;
  margin-top: 2rem;
  font-family: "Yantramanav", sans-serif;
  font-size: 1.5rem;
  letter-spacing: 2px;
  background-color: #273469;
  color: white;
  border-radius: 10px;
  align-self: center;
}
footer {
  text-align: center;
}

@media only screen and (max-width: 500px) {
  html,
  body {
    margin-top: 0;
    padding-top: 0;
    width: 100%;
  }

  .home-header {
    width: 90%;
    justify-content: center;
    align-self: center;
    background-image: url(../images/blue-wallpaper-preview-24.jpg);
    background-size: cover;
  }

  .home-header .header-content-name {
    width: 80%;
    text-align: center;
  }

  .home-header .header-content-image {
    display: none;
  }

  .my-tagline {
    margin-top: 3px;
    color: white;
    font-size: 1.5rem;
  }

  .social {
    width: 100%;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: #273469;
  }

  .social-icons {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 80%;
    height: auto;
  }

  .social-icons img {
    width: 40px;
    height: auto;
  }

  .social-tagline {
    display: flex;
    width: 80%;
    height: auto;
    align-items: center;
    justify-content: center;
  }

  .social-text {
    font-size: 1.25rem;
    width: 80%;
    height: auto;
  }

  .section-head {
    width: 100%;
    height: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: "Yantramanav", sans-serif;
    font-size: 2rem;
  }
  .work {
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image: url("../images/blue-wallpaper-preview-1.jpg");
    background-size: cover;
    padding-bottom: 1rem;
  }

  .work .work-display {
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .kevinbisner-com {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: auto;
  }

  .kevinbisner-com img {
    width: 80%;
    height: auto;
  }

  .kevinbisner-com .kevinbisner-text {
    font-size: 1.25rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 80%;
    height: auto;
  }

  .timberfoottech-com {
    padding: 1rem 0 0 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: auto;
  }

  .timberfoottech-com img {
    width: 80%;
    height: auto;
  }

  .timberfoottech-com .timberfoot-text {
    display: flex;
    font-size: 1.25rem;
    flex-direction: column;
    align-items: center;
    width: 80%;
    height: auto;
  }

  .contact {
    width: 100%;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    padding-bottom: 3rem;
    color: #273469;
  }

  .contact-display {
    width: 80%;
    height: auto;
    display: flex;
    flex-direction: column;
    align-self: center;
    justify-content: center;
  }

  .contact-text {
    width: 100%;
    height: auto;
  }

  .contact-text h2 {
    font-size: 1.5rem;
    text-align: center;
  }

  .contact-text p {
    font-size: 1.25rem;
  }

  .contact-form {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    width: 90%;
    color: #273469;
    font-size: 2rem;
    margin-bottom: 2rem;
  }

  form {
    margin-top: 3rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 90%;
    height: auto;
    border-color: transparent;
  }

  .form-control {
    width: 90%;
    background: transparent;
    border: none;
    outline: none;
    border-bottom: 1px solid #273469;
    color: #273469;
    font-family: "Yantramanav", sans-serif;
    font-size: 1.5rem;
    margin-bottom: 1rem;
  }

  .contact-form button {
    width: 15rem;
    height: 2rem;
    margin-top: 2rem;
    font-family: "Yantramanav", sans-serif;
    font-size: 1.25rem;
    letter-spacing: 2px;
    background-color: #273469;
    color: white;
    border-radius: 10px;
    align-self: center;
  }
}
/* ... */

